<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/white_rect"
    android:paddingBottom="10dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleTV"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/robo_medium"
        android:gravity="center_vertical"
        android:paddingStart="20dp"
        android:textSize="20sp"
        tools:text="@string/alert"
        android:textColor="@color/colorBlack"
        android:letterSpacing="0.03"/>


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/messageTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleTV"
        android:fontFamily="@font/latoregular"
        android:paddingBottom="10dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:paddingTop="5dp"
        android:text="@string/sure_logout"
        android:layout_marginEnd="5dp"
        android:textColor="@color/colorBlack"
        android:textSize="16sp"
        android:lineSpacingMultiplier="1.1"
        android:letterSpacing="0.02"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/positiveTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/messageTV"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/robo_medium"
        android:padding="10dp"
        android:text="@string/yes"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/negativeTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageTV"
        android:layout_marginEnd="10dp"
        android:layout_toStartOf="@+id/positiveTV"
        android:fontFamily="@font/robo_medium"
        android:padding="10dp"
        android:text="@string/no"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

</RelativeLayout>