<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainCL"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:id="@+id/top_Constraint_layout"
        android:layout_height="match_parent"
        android:layout_margin="50dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="0dp"
            android:id="@+id/first_Constraint_layout"
            android:layout_height="40dp"
            android:layout_margin="10dp"
            android:visibility="gone"
            android:background="@drawable/circle"
            app:layout_constraintEnd_toStartOf="@+id/second_Constraint"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/fb_icon_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"

                android:src="@drawable/fb"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/fb_text_id"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"></androidx.appcompat.widget.AppCompatImageView>


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/fb_text_id"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebk"
                android:textStyle="bold"
                android:textSize="8sp"
                android:layout_marginEnd="15dp"
                android:fontFamily="@font/latoregular"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/fb_icon_id"
                app:layout_constraintTop_toTopOf="@+id/fb_icon_id"
                app:layout_constraintBottom_toBottomOf="@+id/fb_icon_id"></androidx.appcompat.widget.AppCompatTextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="10dp"
            android:id="@+id/second_Constraint"
            android:background="@drawable/circle"
            android:layout_width="0dp"
            android:visibility="gone"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/first_Constraint_layout"
            android:layout_height="40dp"
            >

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/google_icon_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/googlepls"
                app:layout_constraintEnd_toStartOf="@+id/google_text_id"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"></androidx.appcompat.widget.AppCompatImageView>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/google_text_id"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/google"
                android:fontFamily="@font/latoregular"
                android:singleLine="true"
                android:textStyle="bold"
                android:textSize="8sp"
                android:textColor="#000000"
                android:layout_marginEnd="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="12dp"
                app:layout_constraintStart_toEndOf="@+id/google_icon_id"
                app:layout_constraintTop_toTopOf="@+id/google_icon_id"
                app:layout_constraintBottom_toBottomOf="@id/google_icon_id"
                ></androidx.appcompat.widget.AppCompatTextView>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/or_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/first_Constraint_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/or"
            ></androidx.appcompat.widget.AppCompatTextView>

        <View
            android:id="@+id/view_right_id"
            android:layout_width="150dp"
            android:layout_height="1dp"
            android:visibility="gone"
            app:layout_constraintStart_toEndOf="@id/or_id"
            app:layout_constraintTop_toBottomOf="@id/first_Constraint_layout"
            android:layout_marginTop="27dp"
            android:layout_marginStart="5dp"
            ></View>

        <View
            android:id="@+id/view_left_id"
            android:layout_width="150dp"
            android:layout_height="0.5dp"
            android:visibility="gone"
            app:layout_constraintEnd_toStartOf="@id/or_id"
            app:layout_constraintTop_toBottomOf="@id/first_Constraint_layout"
            android:layout_marginTop="27dp"
            android:layout_marginEnd="5dp"
            ></View>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/firstname_textinpt_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/view_left_id"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                android:textColorHint="#282828"
                android:singleLine="true"
                android:textSize="12sp" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/last_textinpt_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/firstname_textinpt_layout_id"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emil_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                android:singleLine="true"
                android:textColorHint="#000000"
                android:textSize="12sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/mobile_textinpt_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/last_textinpt_layout_id"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:singleLine="true"
                android:inputType="number"
                android:maxLength="20"

                android:textColorHint="#000000"
                android:textSize="12sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_textinpt_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/mobile_textinpt_layout_id"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/lastname_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emil"
                android:singleLine="true"
                android:textColorHint="#000000"
                android:textSize="12sp"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/paswrd_textinpt_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"

            app:layout_constraintTop_toBottomOf="@id/email_textinpt_layout_id"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/paswrd_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"

                android:textColorHint="#000000"
                android:textSize="12sp"/>
        </com.google.android.material.textfield.TextInputLayout>






        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/conform_textinpt_layout_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true"

            app:layout_constraintTop_toBottomOf="@id/paswrd_textinpt_layout_id"
            app:layout_constraintStart_toStartOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conform_edit_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confrm_paswrd"
                android:inputType="textPassword"
                android:singleLine="true"
                android:textSize="12sp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/vipLoginCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/conform_textinpt_layout_id"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/vip_login"
            android:visibility="gone"


            android:textSize="12sp"/>



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/sign_up_id"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toBottomOf="@id/vipLoginCheckBox"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/colorWhite"
            android:textSize="12sp"
            android:gravity="center"
            android:background="#FC578B"
            ></androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/alrdy_acnt_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="40dp"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign_up_id"
            android:text="@string/alrdy_have_an_acnt"
            android:textSize="10sp"
            android:textColor="#000000"
            ></androidx.appcompat.widget.AppCompatTextView>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/sign_up_id"
            app:layout_constraintStart_toEndOf="@id/alrdy_acnt_id"
            android:text="@string/sign_in"
            android:textColor="#000000"
            android:textSize="12sp"
            android:visibility="gone"
            android:layout_marginStart="5dp"
            android:layout_marginTop="20dp"
            ></androidx.appcompat.widget.AppCompatTextView>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>